fix bottom navbar problem on mobile screen frustrated

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2362,8 +2362,8 @@ p {
 .carousel-item {
   background-color: #2e8163;
   position: relative;
-  height: 99vh;
-  height: calc(var(--vh, 1vh) * 100);}
+  height: 97vh;
+  height: calc(var(--vh, 1vh) * 97);}
   .carousel-item::before {
     position: absolute;
     content: '';
